# immutable-defaults

./: .pdm-python  README.md  comparison.py  immutable_defaults.py  noxfile.py  pyproject.toml
.github/workflows/: python-package.yml  release.yml
src/immutable_defaults/: __init__.py
tests/: tests.py
