[project]
name = "immutable-defaults-py"
version = "0.1.0"
description = "decorator for immutable defaults"
authors = [
    {name = "clvnkhr", email = "calvin_khor@hotmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "hypothesis>=6.100.2",
]
