[project]
name = "immutable-defaults-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "clvnkhr", email = "calvin_khor@hotmail.com"},
]
dependencies = [
    "typing-extensions>=4.11.0",
    "default-mutable>=0.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "hypothesis>=6.100.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
